<resources>
    <string name="app_name">To Do List</string>
    <string name="add_new_task">Add new task</string>
    <string name="task_details">Task Details</string>
    <string name="title">Title</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="set_end_date">Set end date</string>
    <string name="set_start_date">Set start date</string>
    <string name="display_dialog_to_enter_start_date">Display dialog to enter start date</string>
    <string name="display_dialog_to_enter_end_date">Display dialog to enter end date</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour_minute">Hour:Minute</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>