<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/task_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/title_edittext"
        app:layout_constraintEnd_toStartOf="@+id/title_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_edittext"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/start_date_edittext"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/start_date_edittext" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/end_date_edittext"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/end_date_edittext" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/description_edittext" />

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/start_date_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/set_start_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/title_edittext"
        app:layout_constraintStart_toStartOf="@+id/title_edittext"
        app:layout_constraintTop_toBottomOf="@+id/title_edittext" />

    <EditText
        android:id="@+id/end_date_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/set_end_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/start_date_edittext"
        app:layout_constraintStart_toStartOf="@+id/title_edittext"
        app:layout_constraintTop_toBottomOf="@+id/start_date_edittext" />

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="@+id/title_edittext"
        app:layout_constraintStart_toStartOf="@+id/end_date_edittext"
        app:layout_constraintTop_toBottomOf="@+id/end_date_edittext" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/cancel_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <EditText
        android:id="@+id/start_hour_minute_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hour_minute"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/start_date_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_date_edittext"
        app:layout_constraintTop_toTopOf="@+id/start_date_edittext"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <EditText
        android:id="@+id/end_hour_minute_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hour_minute"
        android:importantForAutofill="no"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/end_date_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_date_edittext"
        app:layout_constraintTop_toTopOf="@+id/end_date_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>